fix error message alignment

--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -28,6 +28,7 @@
   /* rest of the colors */
   --clr-black: #222;
   --clr-white: #fff;
+  --clr-red: #ffb4ab;
   --clr-red-light: #f8d7da;
   --clr-red-dark: #842029;
   --clr-green-light: #d1e7dd;
