--- a/src/assets/sass/components/_form.scss
+++ b/src/assets/sass/components/_form.scss
@@ -1,6 +1,4 @@
 .form {
-  display: flex;
-  flex-direction: column;
   width: 90vw;
   max-width: 400px;
   background: var(--clr-primary-dark);
@@ -23,4 +21,13 @@
   border: 1px solid var(--grey-200);
   border-radius: var(--borderRadius);
   outline: none;
+}
+
+.form-btn {
+  width: 100%;
+}
+
+.form-text {
+  width: 100%;
+  text-align: center;
 }
