--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -22,6 +22,7 @@
   /* rest of the colors */
   --clr-black: #222;
   --clr-white: #fff;
+  --clr-red: #ffb4ab;
   --clr-red-light: #f8d7da;
   --clr-red-dark: #842029;
   --clr-green-light: #d1e7dd;
@@ -88,9 +89,18 @@ body {
   line-height: 1.75;
 }
 
-h1 {
+.title {
   font-family: "Comfortaa", cursive;
   font-weight: 700;
+}
+
+.subtitle {
+  font-family: "Comfortaa", cursive;
+  color: var(--clr-grey-400);
+}
+
+.error {
+  color: var(--clr-red);
 }
 
 .flex, .flex-row, .flex-col {
@@ -196,8 +206,6 @@ h1 {
 }
 
 .form {
-  display: flex;
-  flex-direction: column;
   width: 90vw;
   max-width: 400px;
   background: var(--clr-primary-dark);
@@ -220,6 +228,15 @@ h1 {
   border: 1px solid var(--grey-200);
   border-radius: var(--borderRadius);
   outline: none;
+}
+
+.form-btn {
+  width: 100%;
+}
+
+.form-text {
+  width: 100%;
+  text-align: center;
 }
 
 .hero-section {
